removed sidebar from homepage, fixed spacing issue related to home page form

--- a/src/pages/styles/HomePage.css
+++ b/src/pages/styles/HomePage.css
@@ -31,3 +31,13 @@
     flex-shrink: 0;
   }
   
+  .fullscreen-image {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-image: url('../../files/mining-theoatrix.png')
+  }
